--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,10 @@
 <head>
   <meta charset="utf-8" />
   <link rel="icon" href="https://i.pinimg.com/originals/06/3a/8d/063a8db5ac19d1ca054bfd1d587c20c2.png" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Web site created using create-react-app" />
+  <meta name="description" content="Unos señores que te apuntan con el dedo" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <meta name="description" content="Una app de prueva con React">
